force-app/main/default/objects/Customer_unit_Payment__c/Customer_unit_Payment__c.object-meta.xml
<CustomObject>
    <label>Customer Unit Payment</label>
    <nameField>
        <displayFormat>CUP-{000000}</displayFormat>
        <label>customer Unit Payment id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Unit payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>