force-app/main/default/objects/Customer_unit_Payment__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipName>Property_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>