force-app/main/default/objects/Customer_unit_Payment__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Customer Unit Payment</relationshipLabel>
    <relationshipName>Customer_Unit</relationshipName>
    <type>Lookup</type>
</CustomField>