force-app/main/default/objects/Customer_unit_Payment__c/fields/Demand_Letter__c.field-meta.xml
<CustomField>
    <fullName>Demand_Letter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Demand Letter</label>
    <type>Checkbox</type>
</CustomField>