force-app/main/default/objects/Customer_unit_Payment__c/fields/Loan_Tenure_Year__c.field-meta.xml
<CustomField>
    <fullName>Loan_Tenure_Year__c</fullName>
    <label>Loan Tenure (Year)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>