force-app/main/default/objects/Customer_unit_Payment__c/fields/Property_Payment__c.field-meta.xml
<CustomField>
    <fullName>Property_Payment__c</fullName>
    <label>Property Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>