force-app/main/default/objects/Customer_unit_Payment__c/fields/Property_Unit__c.field-meta.xml
<CustomField>
    <fullName>Property_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property Unit</label>
    <referenceTo>Property_Unit__c</referenceTo>
    <relationshipLabel>Customer Unit payments</relationshipLabel>
    <relationshipName>Customer_Unit_payments</relationshipName>
    <type>Lookup</type>
</CustomField>