force-app/main/default/objects/Customer_unit_Payment__c/fields/Receipt_Generate__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Generate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Receipt Generate</label>
    <type>Checkbox</type>
</CustomField>