force-app/main/default/objects/Customer_unit_Payment__c/fields/Received_Amount__c.field-meta.xml
<CustomField>
    <fullName>Received_Amount__c</fullName>
    <label>Received Amount</label>
    <summarizedField>Payment_Shcedule__c.Paid_Amount__c</summarizedField>
    <summaryForeignKey>Payment_Shcedule__c.Payment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>