force-app/main/default/objects/Customer_unit_Payment__c/fields/Sub_Unit__c.field-meta.xml
<CustomField>
    <fullName>Sub_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sub Unit</label>
    <referenceTo>Sub_Unit__c</referenceTo>
    <relationshipLabel>Customer Unit payments</relationshipLabel>
    <relationshipName>Customer_Unit_payments</relationshipName>
    <type>Lookup</type>
</CustomField>