force-app/main/default/objects/Customer_unit_Payment__c/fields/Tower__c.field-meta.xml
<CustomField>
    <fullName>Tower__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tower</label>
    <referenceTo>Tower__c</referenceTo>
    <relationshipLabel>Customer Unit Payment</relationshipLabel>
    <relationshipName>Customer_Unit</relationshipName>
    <type>Lookup</type>
</CustomField>