force-app/main/default/objects/Customer_unit_Payment__c/fields/Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Id__c</fullName>
    <label>Transaction Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>